@@ -1,12 +1,7 @@
 {
-  "count": 273,
+  "count": 266,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-05-01T00:00:00Z",
-      "count": 7,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-03T00:00:00Z",
       "count": 16,
